--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-    <script
-      src="https://kit.fontawesome.com/3acb87dbd6.js"
-      crossorigin="anonymous"
-    ></script>
+    
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap"
       rel="stylesheet"
@@ -27,16 +24,6 @@
 
     <title>Frontend Mentor | Intro component with sign up form</title>
 
-    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
   </head>
 
   <body>
@@ -117,6 +104,7 @@
             id="password"
               type="password"
               placeholder="Password"
+                   aria-label="password"
              
               required
             />
