--- a/index.html
+++ b/index.html
@@ -17,9 +17,6 @@
       rel="stylesheet"
     />
    
-
-  
-   
     <link rel="stylesheet" href="style.css" />
 
     <title>Frontend Mentor | Intro component with sign up form</title>
@@ -65,9 +62,7 @@
             <p class="errormsg invalid-feedback">
               <em> First Name cannot be empty</em>
               </p>
-              <img src="./images/icon-error.svg" class="icon-error" alt="icon-error">
-
-            
+              <img src="./images/icon-error.svg" class="icon-error" alt="icon-error">         
           </div>
 
           <div class="form-control ">
@@ -100,6 +95,7 @@
           
           </div>
           <div class="form-control">
+            <label for="password"></label>
             <input
             id="password"
               type="password"
